--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,6 +3,7 @@
 @import "./base/base";
 @import "./base/all.min.scss";
 @import "./components/header";
+@import "./components/footer";
 @import "./components/blog-project-layouts";
 @import "./components/blog-project-post";
 @import "./components/home";
