--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,13 +1,11 @@
 // Colors
 $background-grey: #0c030b;
-// $background-grey: #222222;
 $subtitle-grey: #bcafb7;
 $secondary-color: lighten(#cb0d83, 5%);
 $third-color: #3cd7c1;
 $fourth-color: #39d34f;
-// $subtitle-grey: #484647;
 $white-text: #fafafa;
-// $white-text: #eee6e3;
+
 // === Variables =====
 $perspective: 60rem;
 $font-size: 8.25rem;
@@ -15,27 +13,16 @@ $split-position: 49%;
 $split-thickness: 8px;
 $split-line: #175b8e;
 $split-color: #15a5c5;
-// $split-color: #ff2c75;
-// // Colors
-// $dark-grey: #333333;
-// $grey: #666666;
-// $light-grey: #f7f7f7;
-// $light-red: #e74c3c;
-// $verylight-red: #fc8275;
-// $dark-red: #82172b;
-// $verydark-red: #82172b;
-// $background-grey: #212121;
-// $lorem-grey: lighten($background-grey, 5%);
-// $dark: #555;
-// $color--primary: hsla(269, 100%, 50%, 1);
+$container: 75rem;
+
 // Font Sizes
 $font-size-large: 1.8rem;
 $font-size-small: 1.4rem;
 $font-size-header: 3rem;
+
 // Spacing
 $xs-size: 0.6rem;
 $s-size: 1.2rem;
-
 $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
