--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,34 +1,34 @@
-.footerContainer{
-	background: darken(grey,10%);
-	padding: 10rem;
-	justify-content: center;
-	align-items: center;
+.footerContainer {
+  background: darken(grey, 10%);
+  padding: 10rem;
+  justify-content: center;
+  align-items: center;
 }
-.footerWrap{
-	margin: auto;
-	max-width: $container;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
+.footerWrap {
+  margin: auto;
+  max-width: $container;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
-.footerIconWrap{
-	border-radius: 90px;
-	background: white;
+.footerIconWrap {
+  display: flex;
+  border-radius: 100%;
+  justify-content: center;
+  align-items: center;
+
+  background: white;
 }
-.footerIcon{
-	fill: black;
-	width: 4rem;
-	height: 4rem;
+.footerIcon {
+  fill: black;
+  width: 4rem;
+  height: 4rem;
 }
-.twitterIcon{
-	
+.twitterIcon {
 }
-.mailIcon{
-	
+.mailIcon {
 }
-.githubIcon{
-	
+.githubIcon {
 }
-.youtubeIcon{
-	
+.youtubeIcon {
 }
