--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -13,7 +13,7 @@ $split-position: 49%;
 $split-thickness: 8px;
 $split-line: #175b8e;
 $split-color: #15a5c5;
-$container: 75rem;
+$container: 75vw;
 
 // Font Sizes
 $font-size-large: 1.8rem;
