--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,8 +1,3 @@
-// @import url("https://fonts.googleapis.com/css?family=Fjalla+One|Open+Sans");
-//@import "compass/css3";
-// 	#484647
-// 	#222222
-// #fafafa
 @font-face {
   font-family: "Blogger";
   src: url("../fonts/BloggerSans.eot"),
@@ -45,85 +40,10 @@ html {
 
 .content-container {
   //max-width: 120rem;
+  padding-top: 15rem;
   margin: 0 auto;
-  max-width: 90vw;
-  min-width: 90vw;
+  max-width: 80vw;
+  min-width: 80vw;
   bottom: 0;
-  height: 100vh;
+  min-height: 100vh;
 }
-// ::-webkit-scrollbar {
-//   width: 8px;
-//   height: 8px;
-// }
-// ::-webkit-scrollbar-button {
-//   width: 0px;
-//   height: 0px;
-// }
-// ::-webkit-scrollbar-thumb {
-//   background: #c0c0c0;
-//   border: 0px none #7c99fa;
-//   border-radius: 50px;
-// }
-// ::-webkit-scrollbar-thumb:hover {
-//   background: #d8d8d8;
-// }
-// ::-webkit-scrollbar-thumb:active {
-//   background: #8d8d8d;
-// }
-// ::-webkit-scrollbar-track {
-//   background: #666666;
-//   border: 0px none #ea0006;
-//   border-radius: 23px;
-// }
-// ::-webkit-scrollbar-track:hover {
-//   background: #666666;
-// }
-// ::-webkit-scrollbar-track:active {
-//   background: #666666;
-// }
-// ::-webkit-scrollbar-corner {
-//   background: transparent;
-// }
-
-// // @mixin clearfix($currheight, $page-height) {
-// //   @if ($currheight >= $page-height) {
-// //     height: 100vh;
-// //   } @else {
-// //     height: 100%;
-// //   }
-// // }
-// .body2 {
-//   color: $dark-grey;
-//   font-family: "Roboto", "Blogger", Helvetica, Arial, sans-serif;
-//   font-size: $m-size;
-//   line-height: 1.6;
-//   overflow-x: hidden;
-//   height: 100vh;
-//   overflow-y: scroll;
-// }
-// .wrapEvery {
-//   margin-left: 2vw;
-//   margin-right: 2vw;
-//   margin-bottom: 2vh;
-//   border-radius: 5px;
-//   background-color: white;
-// }
-// // ::selection {
-// //   text-shadow: 2px 2px #1c78a0, 1px 1px #1c78a0, 3px 3px #1c78a0, 4px 4px #1c78a0, 5px 5px #1c78a0;
-// //   color: white;
-// // }
-// ::selection {
-//   background: #1c78a0;
-//   // background: #1c78a0; // background: #1c78a0;
-//   color: white;
-// }
-
-// .content-container {
-//   margin: 0 auto;
-//   //max-width: 120rem;
-//   max-width: 90vw;
-//   padding: 0 $xs-size;
-//   flex-grow: 1;
-//   bottom: 0;
-//   height: 100;
-// }
