--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,34 +1,76 @@
 .footerContainer {
-  background: darken(grey, 10%);
-  padding: 10rem;
+  background: darken(grey, 25%);
+  padding: 5rem;
   justify-content: center;
   align-items: center;
+  // display: flex;
+  // flex-direction: column;
 }
 .footerWrap {
   margin: auto;
-  max-width: $container;
+  margin-top: 2rem;
+  position: relative;
+  max-width: 40rem;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
 }
 .footerIconWrap {
+  text-decoration: none;
+  position: relative;
   display: flex;
   border-radius: 100%;
+  height: 5rem;
+  width: 5rem;
   justify-content: center;
   align-items: center;
-
   background: white;
+  cursor: pointer;
+
+  &:hover {
+    .mailIcon {
+      opacity: 1;
+    }
+    .twitterIcon {
+      opacity: 1;
+    }
+    .githubIcon {
+      opacity: 1;
+    }
+    .youtubeIcon {
+      opacity: 1;
+    }
+  }
 }
 .footerIcon {
-  fill: black;
-  width: 4rem;
-  height: 4rem;
+  position: absolute;
+  transition: opacity 0.3s;
+  fill: darken(grey, 25%);
+  width: 3rem;
+  height: 3rem;
 }
 .twitterIcon {
+  opacity: 0;
+  fill: #38a1f3;
+  &:hover {
+    opacity: 1;
+  }
 }
 .mailIcon {
+  opacity: 0;
+  fill: darken(grey, 1%);
 }
 .githubIcon {
+  opacity: 0;
+  fill: black !important;
+  &:hover {
+    opacity: 1;
+  }
 }
 .youtubeIcon {
+  opacity: 0;
+  fill: red !important;
+  &:hover {
+    opacity: 1;
+  }
 }
