--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -237,6 +237,7 @@
 .skillAboutContainer {
   background-color: #f4f5f9;
   justify-content: center;
+  min-height: 135vh;
 }
 
 .aboutHeaderWhite {
