--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -10,6 +10,9 @@
 }
 .contactHeader {
   font-size: 6rem;
+  width: 100%;
+  text-align: center;
+  max-width: 50vw;
 }
 .contactForm {
   display: flex;
