--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -16,6 +16,7 @@
   width: 100%;
   text-align: center;
   max-width: 50vw;
+
   background: $white-text;
 }
 .contactForm {
@@ -93,6 +94,44 @@
 .contactCaptcha {
   margin: auto;
   margin-bottom: 2rem;
+}
+.spinner {
+  position:absolute;
+  transform: translateY(30000px);
+
+  z-index:-1;
+  width: 40px;
+  height: 40px;
+  background-color: #333;
+  -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
+  animation: sk-rotateplane 1.2s infinite ease-in-out;
+}
+
+@-webkit-keyframes sk-rotateplane {
+  0% { -webkit-transform: perspective(120px) }
+  50% { -webkit-transform: perspective(120px) rotateY(180deg) }
+  100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
+}
+
+@keyframes sk-rotateplane {
+  0% { 
+    transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg) 
+  } 50% { 
+    transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg) 
+  } 100% { 
+    transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+    -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+  }
+}
+.contactSubmitSpin{
+  position: relative;
+  display:flex;
+  flex-direction:column;
+  justfiy-content: center;
+  align-items:center;
+  margin-bottom:2rem;
 }
 // .contactWrap {
 //   display: flex;
