--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -95,11 +95,13 @@
   margin: auto;
   margin-bottom: 2rem;
 }
+.spinnerWrap {
+  opacity: 0;
+  transform: translateY(-60px);
+  position: absolute;
+  z-index: -1;
+}
 .spinner {
-  position:absolute;
-  transform: translateY(30000px);
-
-  z-index:-1;
   width: 40px;
   height: 40px;
   background-color: #333;
@@ -108,30 +110,38 @@
 }
 
 @-webkit-keyframes sk-rotateplane {
-  0% { -webkit-transform: perspective(120px) }
-  50% { -webkit-transform: perspective(120px) rotateY(180deg) }
-  100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
+  0% {
+    -webkit-transform: perspective(120px);
+  }
+  50% {
+    -webkit-transform: perspective(120px) rotateY(180deg);
+  }
+  100% {
+    -webkit-transform: perspective(120px) rotateY(180deg) rotateX(180deg);
+  }
 }
 
 @keyframes sk-rotateplane {
-  0% { 
+  0% {
     transform: perspective(120px) rotateX(0deg) rotateY(0deg);
-    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg) 
-  } 50% { 
+    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+  }
+  50% {
     transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
-    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg) 
-  } 100% { 
+    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+  }
+  100% {
     transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
     -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
   }
 }
-.contactSubmitSpin{
+.contactSubmitSpin {
   position: relative;
-  display:flex;
-  flex-direction:column;
+  display: flex;
+  flex-direction: column;
   justfiy-content: center;
-  align-items:center;
-  margin-bottom:2rem;
+  align-items: center;
+  margin-bottom: 2rem;
 }
 // .contactWrap {
 //   display: flex;
