--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -47,6 +47,12 @@ html {
   bottom: 0;
   min-height: 100vh;
 }
+.content-container-nomargin{
+   padding-top: 15rem;
+  margin: 0 auto;
+  bottom: 0;
+  min-height: 100vh;
+}
 .inline-link {
   text-decoration: none;
   color: lighten(grey, 25%);
