--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -74,3 +74,11 @@
     opacity: 1;
   }
 }
+.footerHeader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "BrandonGrotesque", sans-serif;
+  font-size: 3rem;
+  position: relative;
+}
