--- a/src/styles/components/_blog-project-post.scss
+++ b/src/styles/components/_blog-project-post.scss
@@ -3,4 +3,28 @@
   width: 100vw;
 }
 .blog {
+	font-family:"Assistant";
+	color: black;
+	h1{
+		font-size:3rem;
+	}
+	h2{
+		font-size:2.5rem;
+	}
+	h3{
+		font-size:2rem;
+	}
+	h4{
+		font-size:1.5rem;
+	}
+	h5{
+		font-size:1rem;
+	}
+	h6{
+		font-size:0.5rem;
+	}
+	p{
+		font-size: 1.75rem;
+	}
+
 }
