--- a/src/styles/components/_projectCard.scss
+++ b/src/styles/components/_projectCard.scss
@@ -51,26 +51,36 @@
   //-webkit-filter: blur(4px);
   cursor: pointer;
   transition: 0.5s all ease;
-
-  &:before {
-    content: "";
-    width: 100%;
-    left: 0;
-    height: 100%;
-    position: absolute;
-    z-index: 1;
-    opacity: 0.4;
-    background: $secondary-color;
-    transition: all 0.5s ease;
+  &:hover{
+  filter:blur(0px);
   }
+  &:hover + .projectTitle {
+    filter: blur(4px);
+    transform: scale(0.8) translateY(-3rem);
+    //-webkit-filter: blur(4px);
+  }
+}
+.projectColorFilter{
+  background: black;
+  position:absolute;
+  width:100%;
+  height:100%;
+  z-index:1;
+  opacity:0.4;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  //-webkit-filter: blur(4px);
+  cursor: pointer;
+  transition: 0.5s all ease;
 
-  &:hover {
-    filter: blur(0px);
-    //-webkit-filter: blur(0px);
-
-    &:before {
-      background: transparent;
-    }
+  &:hover{
+  opacity: 0;
+  }
+  &:hover~.projectCardImage{
+    filter:blur(0px);
   }
   &:hover + .projectTitle {
     filter: blur(4px);
