--- a/src/styles/components/_projectCard.scss
+++ b/src/styles/components/_projectCard.scss
@@ -10,17 +10,25 @@
   position: relative;
   &:before {
     content: "";
-    transition: opacity 0.5s ease-out;
-    height: 100%;
+    transition: 0.5s all ease;
     width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
     position: absolute;
-    box-shadow: 0px 0px 32px $secondary-color;
-    opacity: 0;
+    box-shadow: 0 0 40px 0px;
+    opacity: 0.4;
   }
   &:hover {
     &:before {
-      opacity: 1;
-      box-shadow: 0px 0px 80px $secondary-color;
+      content: "";
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      position: absolute;
+      opacity: 0.4;
+      box-shadow: 0 0 40px 40px;
     }
   }
   margin: 7rem auto;
@@ -51,8 +59,8 @@
   //-webkit-filter: blur(4px);
   cursor: pointer;
   transition: 0.5s all ease;
-  &:hover{
-  filter:blur(0px);
+  &:hover {
+    filter: blur(0px);
   }
   &:hover + .projectTitle {
     filter: blur(4px);
@@ -60,13 +68,13 @@
     //-webkit-filter: blur(4px);
   }
 }
-.projectColorFilter{
+.projectColorFilter {
   background: black;
-  position:absolute;
-  width:100%;
-  height:100%;
-  z-index:1;
-  opacity:0.4;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0.4;
   position: absolute;
   height: 100%;
   width: 100%;
@@ -76,12 +84,13 @@
   cursor: pointer;
   transition: 0.5s all ease;
 
-  &:hover{
-  opacity: 0;
+  &:hover {
+    opacity: 0;
   }
-  &:hover~.projectCardImage{
-    filter:blur(0px);
+  &:hover ~ .projectCardImage {
+    filter: blur(0px);
   }
+
   &:hover + .projectTitle {
     filter: blur(4px);
     transform: scale(0.8) translateY(-3rem);
