--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -14,6 +14,11 @@
   src: url("../fonts/assistant.eot"), /* IE6-IE8 */ url("../fonts/assistant.woff") format("woff"),
     /* Pretty Modern Browsers */ url("../fonts/assistant.ttf") format("truetype"); /* Safari, Android, iOS */
 }
+@font-face {
+  font-family: "Raleway";
+  src: url("../fonts/raleway.eot"), /* IE6-IE8 */ url("../fonts/raleway.woff") format("woff"),
+    /* Pretty Modern Browsers */ url("../fonts/raleway.ttf") format("truetype"); /* Safari, Android, iOS */
+}
 
 @font-face {
   font-family: "BrandonGrotesque";
@@ -47,8 +52,8 @@ html {
   bottom: 0;
   min-height: 100vh;
 }
-.content-container-nomargin{
-   padding-top: 15rem;
+.content-container-nomargin {
+  padding-top: 15rem;
   margin: 0 auto;
   bottom: 0;
   min-height: 100vh;
