--- a/src/styles/components/cv.scss
+++ b/src/styles/components/cv.scss
@@ -1,7 +1,18 @@
 .cvWrap {
-  font-family: "Assistant";
-  font-size: 3rem;
+  font-family: "Raleway";
+  font-size: 2.5rem;
   color: black;
+}
+
+.cvSectionWrap {
+  display: flex;
+  flex-direction: column;
+  &::after {
+    content: "";
+    width: 100%;
+    height: 1px;
+    background-color: lighten(grey, 40%);
+  }
 }
 
 .cvSection {
@@ -10,30 +21,46 @@
 }
 
 .cvName {
+  margin-top: 2rem;
+  letter-spacing: 1.8px;
 }
-
+.cvColumn {
+  width: 37%;
+  margin-right: auto;
+}
 .cvItemsContainer {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
+  max-width: 100%;
 }
 
 .cvItems {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .cvTitle {
+  letter-spacing: 1.8px;
+  text-align: left;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  margin-right: 0.5rem;
 }
 
 .cvDate {
+  text-align: right;
+  font-size: 1.25rem;
 }
 
 .cvDetails {
+  font-size: 1.5rem;
 }
 
 .cvColumns {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
