--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -139,7 +139,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justfiy-content: center;
+  justify-content: center;
   align-items: center;
   margin-bottom: 2rem;
 }
