--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -1,8 +1,12 @@
 .aboutContainer {
   font-size: 1.6rem;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Raleway", sans-serif;
+  letter-spacing: 0.5px;
   color: black;
   div[data-to-animate] {
+    opacity: 0;
+  }
+  button[data-to-animate] {
     opacity: 0;
   }
   & > div {
@@ -33,14 +37,6 @@
   font-family: "BrandonGrotesque", sans-serif;
   font-size: 3rem;
   position: relative;
-  &:after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    background-color: black;
-    height: 0.4rem;
-    width: 12.5rem;
-  }
 }
 // ME
 .meAboutContainer {
@@ -69,20 +65,6 @@
 .meAboutImage {
   position: relative;
   width: 50%;
-  &:before {
-    position: absolute;
-    content: "⌟";
-    font-size: 15rem;
-    bottom: -90px;
-    right: -50px;
-  }
-  &:after {
-    position: absolute;
-    content: "⌜";
-    font-size: 15rem;
-    top: -90px;
-    left: -50px;
-  }
 }
 //
 .temp {
@@ -137,6 +119,9 @@
   z-index: 3 !important;
   width: 0%;
   height: 0%;
+}
+.skillContent {
+  max-width: 55% !important;
 }
 .skillGone {
   opacity: 0;
@@ -242,14 +227,6 @@
 
 .aboutHeaderWhite {
   color: white;
-  &:after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    background-color: white;
-    height: 0.4rem;
-    width: 12.5rem;
-  }
 }
 .editAboutWrap {
   display: flex;
@@ -271,21 +248,8 @@
 .reactPlayer {
   margin: auto;
   position: relative;
-  &:before {
-    position: absolute;
-    content: "⌟";
-    font-size: 15rem;
-    bottom: -90px;
-    right: -50px;
-  }
-  &:after {
-    position: absolute;
-    content: "⌜";
-    font-size: 15rem;
-    top: -90px;
-    left: -50px;
-  }
 }
+
 .gameAboutContainer {
   background-color: #f4f5f9;
 }
