--- a/src/styles/components/cv.scss
+++ b/src/styles/components/cv.scss
@@ -14,7 +14,7 @@
     background-color: lighten(grey, 40%);
   }
   a {
-    color: grey;
+    color: rgb(150, 150, 150);
     text-decoration: underline;
     &:hover {
       color: black;
