--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,5 +1,6 @@
 .footerContainer {
-  background: #333;
+  background: rgb(30, 30, 34);
+  //background: #333;
   padding: 5rem;
   justify-content: center;
   align-items: center;
@@ -45,7 +46,7 @@
 .footerIcon {
   position: absolute;
   transition: opacity 0.3s;
-  fill: #333;
+  fill: rgb(30, 30, 34);
   width: 3rem;
   height: 3rem;
 }
