finally finished adding content to my first post and styling. perhaps I would want to add more colors or something and maybe add like other projects section at the bottom also add a back to top thing also removed remnant of like tags and blogs but frame is still there for possible re integration. also thank emily and style for media queries yeet

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -21,6 +21,13 @@
   & > div[class$="Container"] {
     padding: 8rem 0 8rem 0;
   }
+  a {
+    color: rgb(150, 150, 150);
+    text-decoration: underline;
+    &:hover {
+      color: black;
+    }
+  }
 }
 
 //SHARED
