--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -143,6 +143,10 @@
   align-items: center;
   margin-bottom: 2rem;
 }
+.kofidonate {
+  border: 0px;
+  height: 36px;
+}
 // .contactWrap {
 //   display: flex;
 //   flex-direction: column;
