--- a/src/styles/components/_blog-project-post.scss
+++ b/src/styles/components/_blog-project-post.scss
@@ -2,21 +2,67 @@
   height: 45.01rem;
   width: 100vw;
 }
+
+.postTitle {
+  width: 100%;
+  text-align: left;
+  color: black;
+  font-size: 5rem;
+  margin-top: 4rem;
+  font-weight: 100;
+  font-family: "BrandonGrotesque";
+}
+.postDataWrap {
+  color: black;
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  margin-top: 3rem;
+  text-align: center;
+  & > span {
+    font-size: 5rem;
+    color: grey;
+    opacity: 0.5;
+    margin: 0 auto;
+  }
+  & > div {
+    flex-basis: 100%;
+    font-size: 2rem;
+    position: relative;
+  }
+
+  div > div:nth-of-type(1) {
+    font-size: 3rem;
+    font-family: "BrandonGrotesque";
+    font-weight: 100;
+  }
+}
 .blog {
   font-family: "raleway";
   color: black;
+  letter-spacing: 1px;
+  min-width: 75%;
+  max-width: 75%;
   a {
     color: rgb(150, 150, 150);
     text-decoration: underline;
     &:hover {
       color: black;
     }
+    .gatsby-resp-image-background-image {
+      // padding-bottom: calc(60vw / 1.77) !important;
+    }
   }
   h1 {
-    font-size: 3rem;
+    font-size: 4rem;
+    margin-top: 4rem;
+    font-weight: 100;
+    font-family: "BrandonGrotesque";
   }
   h2 {
     font-size: 2.5rem;
+    letter-spacing: 1.8px;
   }
   h3 {
     font-size: 2rem;
@@ -31,11 +77,67 @@
     font-size: 0.5rem;
   }
   p {
-    font-size: 1.75rem;
+    font-size: 2rem;
+    font-weight: 400;
+  }
+  blockquote {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+    position: relative;
+    display: inline-block;
+    font-style: italic;
+    p {
+      width: inital;
+    }
+    &:before {
+      opacity: 0.5;
+      color: grey;
+      font-size: 5rem;
+      position: absolute;
+      content: "“";
+      top: -2rem;
+      left: -3rem;
+    }
+    &:after {
+      color: grey;
+      opacity: 0.5;
+      font-size: 5rem;
+      position: absolute;
+      content: "”";
+      bottom: -3rem;
+      right: -3rem;
+    }
   }
   .columntest {
     display: flex;
     flex-direction: row;
     color: red;
+  }
+  .embedVideo-container {
+    //max-width: 100vw !important;
+    //margin: auto calc(-50vw + 50%) !important;
+    //max-height: 90vh !important;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    iframe {
+      width: 60vw;
+      height: calc(60vw / 1.77);
+      margin: auto calc(-30vw + 50%) !important;
+    }
+  }
+
+  .gatsby-resp-image-link {
+    //width: 100vw !important;
+    max-width: 60vw !important;
+    margin: auto calc(-30vw + 50%) !important;
+    object-fit: cover;
+    max-height: calc(60vw / 1.77) !important;
+    display: block !important;
+    box-shadow: none !important;
+    overflow: hidden;
+    margin-top: 5rem !important;
+    margin-bottom: 5rem !important;
   }
 }
