started writing blog post numero dos and implementing new svgs, also I have to start designing for other media queries

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -46,7 +46,7 @@
 .footerIcon {
   position: absolute;
   transition: opacity 0.3s;
-  fill: rgb(30, 30, 34);
+  fill: yellow;
   width: 3rem;
   height: 3rem;
 }
